# Morkite

./: .gitignore  CMakeLists.tmp.mingw.txt  CMakeLists.txt  README.md  makefile
package/deb/: morkite.sh  postinst  postrm
planning/: planning.drawio
scripts/: test.lua
src/: Makefile  test.cpp  test.lua
